[fix] fixed loading indicator overflow view

--- a/src/shared/LoadingIndicator/LoadingIndicator.module.scss
+++ b/src/shared/LoadingIndicator/LoadingIndicator.module.scss
@@ -1,12 +1,13 @@
 // based on loader from https://loading.io/css/
 
-$size: 0.8rem;
+$size: 12px;
 
 .root {
     display: inline-block;
     position: relative;
     width: 64px;
     height: $size;
+    z-index: 1;
 
     span {
         position: absolute;
